test/Fail/Polarity-pragma-for-module-parameter.agda


module _ (F : Set → Set) where

{-# POLARITY F + #-}
